--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+@font-face {
+    font-family: myFirstFont;
+    src: url(./font/Poppins-Regular.ttf);
+  }
+
 * {
     box-sizing: border-box;
   }
 
   body {
-    font-family: Arial, sans-serif;
+    font-family: myFirstFont;
     margin: 0;
     padding: 0;
     line-height: 1.6;
@@ -45,14 +50,16 @@
   .banner img {
     position: absolute;
     height: 100%;
-    /* left: 10%; */
+    left: 10%;
   }
+
 
   .banner .content {
     position: absolute;
     z-index: 2;
-    left: 0%;
-    bottom: 0px;
+    /* left: 0%; */
+    /* bottom: 0px; */
+    top: 50%;
     color: white;
     max-width: 90%;
     padding: 20px;
@@ -60,13 +67,17 @@
   }
 
   .banner .content h2 {
-    background-color: #007f61;
+    background-color: #FFF;
     display: inline-block;
-    color: #fff;
+    color: red;
     padding: 10px 20px;
     border-radius: 5px;
     margin: 0;
     font-size: 32px;
+  }
+
+  .banner .content h2 span{
+    color: red;
   }
 
   .banner .content h1 {
@@ -74,6 +85,15 @@
     font-size: 64px;
     margin: 0px 0px 0px 70px;
     font-weight: bold;
+  }
+
+  .content{
+    margin: 40px;
+    text-align: center;
+  }
+
+  .content h2{
+    color: #006c27;
   }
 
   .form-card {
@@ -118,21 +138,35 @@
 
   .features {
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     flex-wrap: wrap;
     padding: 30px 20px;
     background-color: #f9f9f9;
     text-align: center;
+    font-weight: 600;
   }
 
-  .features div {
-    flex: 1 1 200px;
+  .features div{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .features div > div {
+    /* flex: 1 1 200px; */
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    width: 350px;
   }
 
   .why-choose {
     text-align: center;
     padding: 30px 20px;
+    background: #f0f0f0;
   }
 
   .why-cards {
@@ -150,6 +184,8 @@
     flex: 1 1 250px;
     text-align: center;
     border-radius: 10px;
+    font-size: 20px;
+    font-weight: bold;
   }
 
   footer {
@@ -178,6 +214,10 @@
       position: static;
       width: 100%;
       margin-top: 400px;
+    }
+    
+    .features div > div {
+      flex: 1 1 100%;
     }
 
     .banner {
@@ -231,6 +271,26 @@ width: 100%;
 align-items: center;
 }
 
+.testimonial-card-student{
+    position: relative;
+    z-index: 1;
+    color: white;
+}
+
+.testimonial-card-student::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('./img//handshake.jpg');
+    background-size: cover;
+    background-position: center;
+    opacity: 0.2; /* Adjust opacity here */
+    z-index: -1;
+  }
+
 .testimonial-card {
 flex: 0 0 100%;
 box-sizing: border-box;
@@ -246,6 +306,7 @@ border-radius: 50%;
 margin-bottom: 1rem;
 }
 
+
 .arrow {
 cursor: pointer;
 position: absolute;
@@ -255,6 +316,9 @@ font-size: 2rem;
 color: #333;
 z-index: 100;
 user-select: none;
+background: #FFF;
+padding: 12px;
+border-radius: 30px;
 }
 
 .arrow.left {
@@ -288,7 +352,7 @@ right: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     box-sizing: border-box;
-    height: fit-content;
+    height: 100%;
   }
 
   .testimonial-card img {
@@ -408,4 +472,30 @@ right: 10px;
     100% {
       transform: translateX(-50%);
     }
+  }
+
+  .loader-overlay {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(255, 255, 255, 0.8);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+
+  .loader {
+    border: 6px solid #f3f3f3;
+    border-top: 6px solid #3498db;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
   }
