--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
     overflow: hidden;
   }
 
-  .banner img {
+  .banner .banner-nurse {
     position: absolute;
     height: 100%;
     left: 10%;
@@ -108,6 +108,15 @@
     width: 300px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     z-index: 2;
+    text-align: left;
+  }
+
+  .form-card img{
+    width: 170px;
+    height: 170px;
+    position: absolute;
+    right: -50px;
+    bottom: 318px;
   }
 
   .form-card h3 {
@@ -215,6 +224,10 @@
       width: 100%;
       margin-top: 400px;
     }
+
+    .form-card img{
+      right: 0px;
+    }
     
     .features div > div {
       flex: 1 1 100%;
@@ -239,7 +252,7 @@
       font-size: 36px;
     }
 
-    .banner img {
+    .banner .banner-nurse {
       left: auto;
     }
   }
@@ -346,18 +359,18 @@ right: 10px;
     max-width: 100%;
     flex-shrink: 0;
     padding: 20px 15px;
-    background: white;
+    /* background: white; */
     margin: 0;
     border-radius: 12px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); */
     text-align: center;
     box-sizing: border-box;
     height: 100%;
   }
 
   .testimonial-card img {
-    width: 80px;
-    height: 80px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 15px;
